src/styles.scss
/* ... */
.page-header {
  margin-bottom: 12px;
}
.col-sm-3 .card, .box-alighnment .card {margin-bottom:10px;}
.card .card-header {
  padding: 10px 15px;
}
.card-title {
  margin-bottom: 6px;
}
.card .card-block, .card .card-body {
  padding: 15px 15px;
}
.box-alighnment .card {
  height: 133px !important;
}
.col-md-8 .chart-graph .card-body {
  padding-bottom:0;
}
.pcoded-navbar .main-menu-header {
  padding:9px 20px;
  height: 56px;
}
.apexcharts-canvas {
  width:100% !important;
}
.card-tab {height: 553px;}
.card-tab .form-group label {
  color:#fff;
}
.card-tab .form-group .form-control {
  background-color: #5f7082;
  opacity: 1;
  border: 0;
  color: #fff;
}
.nav-tabs .nav-link.active {
  background: #3e5871;
  color: #fff;
}
.nav-tabs {
  border-bottom: 1px solid #3e5871;
}
.profile-card-2 .card-body{position:relative}
.profile-card-2 .profile{border-radius:50%;position:absolute;top:-42px;left:15%;
  max-width:75px;border:3px solid #fff;transform:translate(-50%)}
.profile-card-2 h5{font-weight:600}
.profile-card-2 .card-text{font-weight:300;font-size:15px}
.profile-card-2 .icon-block{float:left;width:100%}
.profile-card-2 .icon-block a{text-decoration:none}
.profile-card-2 i{display:inline-block;text-align:center;width:30px;height:30px;
  line-height:30px;border-radius:50%;margin:0 5px}

.profile-card-2 .icon-block .btn.btn-primary {margin: 3px 0 0 3px; padding: 9px 12px;
  line-height: 14px; border-radius: 4px;}

#selectBox {text-align:right; width:17%; margin-left:auto; z-index:3; position:relative;}
#bar-chart-2-cac {margin-top:-39px;}
.apexcharts-canvas svg {width:100% !important;}

.b-chart #selectBox {width:100%;}

.pcoded-navbar.navbar-collapsed .pcoded-menu-caption:after{
  display: none;
}

.card.c-bg.profile-card-2,  .profile-area .card {margin-bottom:5px;}

.c-row {margin-left:-5px; margin-right:-5px;}
.c-pad {padding-left:5px; padding-right:5px;}

.c-pad .card.c-bg, .caarosel.team-list, .chart-graph .card {margin-bottom:10px !important;}

.update-rank .card-header {display:none;}

#bar-chart-2-cac {min-height:339px !important;}

.card-wrap .card-icon {-webkit-box-flex:0; flex:0 0 22%; max-width:22%; padding-right:15px ;}
.card-wrap .card-des {-webkit-box-flex:0; flex:0 0 78%; max-width:78%;}
.card-wrap .card-icon .fa {font-size:39px; text-align:center; display:block; color: #1abc9c;}

.top-user .img-radius {width:42px; height:42px; margin-right:9px; }
.top-user span {font-size:13px;}
.top-user .fa {margin-left:10px;}
.profile-notification .pro-body {padding:10px 0 !important;}

.mob-box {display:none;}

.drp-user .pro-body {background: #3e5871; color:#fff;}
.drp-user .pro-body li a {color:#fff !important;}
.pagination {float: right;}
.pagination .page-link, .page-item.disabled .page-link {background-color: #2d3e50;}

.modal-content {   /* background: #1e2a36;*/ background: #3e5871;}
.modal-content h5.modal-title {color: #1abc9c;}
.modal-header {border-bottom: 1px solid #487390;}
.modal-footer {border-top: 1px solid #487390; padding:15px 10px;}
.modal-content .form-group label {color:#fff;}
.modal-content .btn.btn-default {background:#666; color:#fff; margin-right:10px;}
.table td, .table th {font-size:12px; line-height:6px;     color: #b5b5b5;}
.table.table-dark thead th {background-color: #2d3e50;}
.modal-content .btn-outline-secondary {color: #b6c7d6; border-color: #b6c7d6;}

.modal-content .close {color: #fff; text-shadow:none; opacity: 1;}

.team-list .slick-slide img {border:2px solid #1abc9c !important;}

.app-modal-body .table td, .app-modal-body .table th {line-height:19px; text-align:left; border-top: 1px solid #496886;
  white-space: inherit; vertical-align: middle; padding: 6px 12px !important;}

  .app-modal-body .table.table_small tr {background-color:#374b5f;}
.app-modal-body .table.table_small tr:first-child {background-color:#2d3e50;}

.table-dark {background-color:#2a3b4d !important; }
.table-dark tbody tr {transition: 0.3s;}
.table-dark tbody tr:hover {background-color: #3e5871 !important;}

.auth-wrapper .auth-content {padding-top:0; padding-bottom:0; position: absolute;
left:0; right:0; top:50%; transform:translateY(-50%); margin:auto;}
.auth-wrapper .auth-content .login-logo {line-height:28px;}
.footer-color {background: #2d3e50;}

.main-footer.footer-color {border-top:10px solid #1e2a36 !important; text-align: center;
  font-size: 13px; font-weight: 400; color: #a9b9ca !important;}
  .main-footer.footer-color strong {font-weight: 400;}

.welcome-area {position: relative;}
.welcome-area img {width:100%;}
.welcome-area .w-inner {position: absolute; left:0; right:0; margin: auto; top:50%;
transform: translateY(-50%); z-index:3; padding:19%;}
.welcome-area .w-inner h3 {font-size: 24px; margin-bottom: 36px;}
.welcome-area .w-inner h4 {font-size: 16px; font-style: italic; margin-bottom:16px; }

.modal-header.l-head {
  margin: 0px auto;
  position: absolute;
  right: 0;
  border: oldlace;
  z-index: 3;
  padding:0;
  border:0;
}
.modal-header.l-head .close {
  color: #fff;
  text-shadow: none;
  opacity: 1;
  background: #00a752;
  opacity: 1 !important;
  margin: 0 !important;
  padding: 10px !important;
  line-height: 14px;
  border:0 !important;
  display:block;
  border:0 !important;
  box-shadow: none !important;
}
.icard-modal .close {
  color: #fff;
  text-shadow: none;
  opacity: 1;
  background: #00a752;
  opacity: 1 !important;
  margin: 0 !important;
  padding: 10px !important;
  line-height: 14px;
  border:0 !important;
  display:block;
  position: absolute;
  top:0;
  right:0;
  box-shadow: none !important;
}
.i-wrapper .c-box {position: relative; padding:0 5px;}
.i-wrapper .c-box img.b-img {width:204px; height:324px;}
.i-inner {position: absolute; left:0; right:0; top:36%; z-index:3; text-align:center ;}
.i-inner img {width:83px; height:82px; border-radius:50%;}
.i-inner h4 {font-size: 13px; margin-top:6px; margin-bottom: 0; text-transform:uppercase;}
.i-inner h5 {margin-top:1px; color:#7d7d7d; font-size:11px; margin-bottom: 4px;}
/* ... */

